--- a/portfolio/home/static/login.css
+++ b/portfolio/home/static/login.css
@@ -17,11 +17,11 @@
     width: 400px;
     height: 500px;
     align-items: center;
-    border: 5px solid #0ef;
-    box-shadow: 0 0 20px #0ef,inset 0 0 20px #0ef;
+    border: 5px solid rgb(236, 236, 236);
+    box-shadow: 0 0 20px #f67f8d,inset 0 0 20px #f67f8d;
   }
   .wrapper:hover{
-    box-shadow: -1px -1px 14px 14px #0ef, inset -1px -1px 14px 1px #0ef;
+    box-shadow: -1px -1px 14px 14px #f67f8d, inset -1px -1px 14px 1px #f67f8d;
     border: none;
   }
 h2 {
@@ -54,14 +54,14 @@ form div{
     border-bottom: 2px solid rgb(224, 11, 142) !important; /* Add custom bottom border on focus */
   }
   .btn{
-    background-color: #0ef;
-    box-shadow: 3px cyan;
+    background-color: #f67f8d;
+    box-shadow: 3px rgb(220, 59, 59);
   }
   input[type="submit"] {
     font-size: 15px;
     width: 40%;
-    background-color: #42d7ea;
-    box-shadow:0px 0px 17px 2px #0ef;
+    background-color: #f67f8d;
+    box-shadow:0px 0px 17px 2px #f67f8d;
     color: #fff;
     border: none;
     padding: 10px;
@@ -70,8 +70,8 @@ form div{
     margin-top: 10px;
 }
 input[type="submit"]:hover {
-    background-color: #42d7ea;
-    box-shadow: 0px 1px 11px 5px #0ef;
+    background-color: #ea4a42;
+    box-shadow: 0px 1px 11px 5px #f67f8d;
 }
 p {
     margin-top: 10px;
